the card graphics, game context, elixir graphics added

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -10,5 +10,6 @@
         <file>assets/bg.jpg</file>
         <file>assets/red_grass.jpg</file>
         <file>assets/green_grass.jpg</file>
+        <file>assets/elixir.png</file>
     </qresource>
 </RCC>
