the card graphics, game context ,and agent context matched for a game changing update

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -11,5 +11,6 @@
         <file>assets/red_grass.jpg</file>
         <file>assets/green_grass.jpg</file>
         <file>assets/elixir.png</file>
+        <file>assets/upgrade.png</file>
     </qresource>
 </RCC>
