--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -12,5 +12,6 @@
         <file>assets/green_grass.jpg</file>
         <file>assets/elixir.png</file>
         <file>assets/upgrade.png</file>
+        <file>assets/bg.webp</file>
     </qresource>
 </RCC>
